--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,9 @@ rich==14.0.0
 scikit-learn==1.7.0
 scipy==1.15.3
 six==1.17.0
+whitenoise==6.6.0
+dj-database-url==2.1.0
+psycopg2-binary==2.9.9
 sqlparse==0.5.3
 # tensorboard==2.19.0
 # tensorboard-data-server==0.7.2
