--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ fonttools==4.58.5
 gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.73.1
-gunicorn==23.0.0
+gunicorn
 h5py==3.14.0
 idna==3.10
 joblib==1.5.1
