--- a/requirements.txt
+++ b/requirements.txt
@@ -44,13 +44,14 @@ whitenoise==6.6.0
 dj-database-url==2.1.0
 psycopg2-binary==2.9.9
 sqlparse==0.5.3
-# tensorboard==2.19.0
-# tensorboard-data-server==0.7.2
-# tensorflow-io-gcs-filesystem==0.31.0
-# termcolor==3.1.0
-# threadpoolctl==3.6.0
-# typing_extensions==4.14.1
-# tzdata==2025.2
-# urllib3==2.5.0
-# Werkzeug==3.1.3
-# wrapt==1.17.2
+tensorflow==2.16.2 
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==3.1.0
+threadpoolctl==3.6.0
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
+Werkzeug==3.1.3
+wrapt==1.17.2
