--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ whitenoise==6.6.0
 dj-database-url==2.1.0
 psycopg2-binary==2.9.9
 sqlparse==0.5.3
-tensorflow==2.16.2
+tensorflow-cpu==2.16.2
 tensorboard==2.16.2  # <-- ADJUSTED THIS VALUE
 tensorboard-data-server==0.7.2
 tensorflow-io-gcs-filesystem==0.31.0
